charts/snowplow-kyverno-policies/tests/kyverno/restrict-image-registries/chart-values.yaml
# Chart values used to render the policy under test (scripts/kyverno-policy-test.sh).
policies:
  restrictImageRegistries:
    enabled: true
    allowedRegistries:
      - 793733611312.dkr.ecr.eu-central-1.amazonaws.com
      - docker.io/snowplow
